--- a/06._DogInder/package.json
+++ b/06._DogInder/package.json
@@ -14,11 +14,11 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev":"cross-env PORT=8080 nodemon app.js",
-    "prod": " node app.js"
+    "prod": "node app.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
