--- a/09._Middleware_Security/package.json
+++ b/09._Middleware_Security/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.2.1"
+    "express-rate-limit": "^8.2.1",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
