--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "devDependencies": {
     "nodemon": "^3.1.11",
     "svelte-routing": "^2.13.0"
+  },
+  "dependencies": {
+    "init": "^0.1.2",
+    "mongodb": "^7.0.0",
+    "socket.io": "^4.8.1"
   }
 }
